@@ -7,8 +7,8 @@ dnl set the version here
 dnl
 SINGULAR_MAJOR_VERSION=1
 SINGULAR_MINOR_VERSION=1
-SINGULAR_SUB_VERSION=1
-VERSION_DATE="July 1997"
+SINGULAR_SUB_VERSION=2
+VERSION_DATE="August 1997"
 AC_SUBST(SINGULAR_MAJOR_VERSION)
 AC_SUBST(SINGULAR_MINOR_VERSION)
 AC_SUBST(SINGULAR_SUB_VERSION)
